translate missing section

--- a/content/copyright.html
+++ b/content/copyright.html
@@ -1,7 +1,7 @@
 <section data-type="copyright-page" xmlns="http://www.w3.org/1999/xhtml">
 <h1>Introducción a p5.js</h1>
 
-<p class="author">por <span class="firstname">Lauren </span> <span class="surname">McCarthy</span>, <span class="firstname">Casey </span> <span class="surname">Reas</span>, and <span class="firstname">Ben </span> <span class="surname">Fry</span>. Traducido por <span class="firstname">Aarón </span> <span class="surname">Montoya-Moraga</span></p>
+<p class="author">por <span class="firstname">Lauren </span> <span class="surname">McCarthy</span>, <span class="firstname">Casey </span> <span class="surname">Reas</span>, y <span class="firstname">Ben </span> <span class="surname">Fry</span>. Traducido por <span class="firstname">Aarón </span> <span class="surname">Montoya-Moraga</span></p>
 
 <p class="copyright">Copyright © 2016 Maker Media. Todos los derechos reservados. Traducción al español © 2017 Processing Foundation</p>
 
