--- a/content/copyright.html
+++ b/content/copyright.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="copyright-bottom">
-<p class="isbn">TBD</p>
+<p class="isbn">978-0-9998813-0-9</p>
 
 <!--<p class="printer">[LSI]</p>-->
 </div>
