--- a/content/ch11-arrays.html
+++ b/content/ch11-arrays.html
@@ -1,4 +1,4 @@
-this.angulo<section data-type="chapter" id="arrays" xmlns="http://www.w3.org/1999/xhtml">
+<section data-type="chapter" id="arrays" xmlns="http://www.w3.org/1999/xhtml">
 <h1 class="chapterhead">Arreglos</h1>
 
 <p class="lede">Un<a contenteditable="false" data-primary="arrays" data-type="indexterm" id="a11">&nbsp;</a><em>arreglo</em> es una lista de variables que comparten el mismo nombre. Los arreglos son &#xFA;tiles porque hacen posible trabajar con m&#xE1;s variables sin crear un nombre nuevo para cada una. Esto hace que el c&#xF3;digo sea m&#xE1;s corto, m&#xE1;s f&#xE1;cil de leer y de actualizar.</p>
@@ -209,7 +209,7 @@ function draw() {
 var x = [12, 20];         // Declara y asigna valores al arreglo
 print(x.length);          // Imprime 2 en la consola
 
-var y = ["gato", 10, false, 50]; // Declara y asigna valores al arreglo
+var y = ["gato", 10, false, 50]; <!--// Declara y asigna valores al arreglo-->
 print(y.length);          // Imprime 4 en la consola
 
 var z = [];               // Declara un arreglo vac&#xED;o
@@ -386,7 +386,7 @@ function draw() {
 
 <pre data-code-language="p5js" data-type="programlisting">
 var imagenRobot;
-var bots = [];  // Declara un arreglo para almacenar objetos Robot
+var bots = [];  <!--// Declara un arreglo para almacenar objetos Robot-->
 
 function preload() {
   imagenRobot = loadImage("robot1.svg");
