--- a/content/ch12-data.html
+++ b/content/ch12-data.html
@@ -475,7 +475,7 @@ function setup() {
   createCanvas(720, 480);
   // Crea el archivo nuevo
   salida = createWriter("ejercitoBots.tsv");
-  // Escribe una l&#xED;nea de encabezado con los t&#xED;tulos de las columnas
+  <!--// Escribe una l&#xED;nea de encabezado con los t&#xED;tulos de las columnas-->
   salida.println("tipo\tx\ty");
   for (var y = 0; y &lt;= height; y += 60) {
     for (var x = 0; x &lt;= width; x += 20) {
