update for print ISBN

--- a/content/copyright.html
+++ b/content/copyright.html
@@ -43,7 +43,9 @@
 </div>
 
 <div class="copyright-bottom">
-<p class="isbn">978-0-9998813-0-9</p>
+<!-- PDF ISBN: 978-0-9998813-0-9 -->
+<!-- PRINT ISBN: 978-0-9998813-1-6 -->
+<p class="isbn">978-0-9998813-1-6</p>
 
 <!--<p class="printer">[LSI]</p>-->
 </div>
