Fix margin issues

--- a/content/ch11-arrays.html
+++ b/content/ch11-arrays.html
@@ -432,7 +432,8 @@ function Robot(img, tempX, tempY) {
 
   // Dibuja el robot en la pantalla
   this.mostrar = function() {
-    image(this.botImagen, this.xpos, this.ypos + this.desplazamiento);
+    image(this.botImagen, this.xpos,
+          this.ypos + this.desplazamiento);
   }
 }</pre>
 <a contenteditable="false" data-primary="arrays" data-startref="a11a11" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="robot programs (examples)" data-startref="rp11aoo" data-type="indexterm">&nbsp;</a></section>
